ops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mcs
  labels:
    app.kubernetes.io/name: mcs
    app.kubernetes.io/part-of: mcs
